Message is printing when new client connects with socketio

--- a/public/index.html
+++ b/public/index.html
@@ -3,5 +3,8 @@
   <head></head>
   <body>
     CHAT APPLICATION
+    <!-- since socketio is included in index.js, below client side version of the file is already made available.  -->
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="js/chat.js"></script>
   </body>
 </html>
